web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__derive__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

