web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__derive__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nderive {\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost\n}\n"
snapshot_kind: text
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees
